# Protei-FSM-Problem

./: .dockerignore  CMakeLists.txt  DEFENSE.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  main.cpp  task.txt  task_utf8.txt
.claude/: settings.local.json
task/: PLAN.md  plan-v2.md  readme.txt  res.md  task.md
test_ds1/: out.csv
